apps/modded-mc/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: modded-mc-map
  namespace: modded-mc
spec:
  hostnames:
    - mc.engiqueersconcordia.ca
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: engiqueers
      namespace: ingress
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: modded-mc-minecraft-map
          port: 8100
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
